# omne-agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-cli/src/main/: app.rs  approval_display.rs  ask_exec.rs  command.rs  fan_out_linkage_format.rs  init.rs  mcp_server.rs  notify_integration.rs  preamble.rs  preset.rs  process_and_utils.rs  provider_model_config.rs  reference.rs  repl.rs  toolchain.rs  tui.rs  watch_inbox.rs  watch_inbox_tests.rs
crates/agent-cli/src/main/command/: fan_out.rs  tasks.rs  tests.rs  types.rs  utils.rs  workflow.rs
crates/agent-cli/src/main/process_and_utils/: app_impl.rs  app_types.rs  event_render.rs  process_follow.rs  rpc_parse.rs  tests.rs  utils.rs
crates/agent-cli/src/main/tui/: details.rs  inline_context.rs  key_helpers.rs  overlays.rs  render_base.rs  render_overlay.rs  render_thread_list.rs  render_thread_view.rs  rpc_outcome.rs  runtime.rs  tests.rs  tool_format.rs  types.rs  ui_state_core.rs  ui_state_inline_execute.rs  ui_state_inline_palette.rs  ui_state_key_handling.rs  ui_state_overlays.rs
crates/agent-cli/src/main/watch_inbox_tests/: approvals.rs  attention_and_filters.rs  inbox_json.rs  watch_detail_summary.rs
crates/app-server/: Cargo.toml
crates/app-server-protocol/: Cargo.toml
crates/app-server-protocol/src/: export.rs  lib.rs
crates/app-server-protocol/src/lib/: approval.rs  artifact.rs  client_request.rs  file_edit_delete.rs  file_read_glob_grep.rs  file_write_patch.rs  fs.rs  jsonrpc.rs  mcp.rs  process.rs  repo_index_search.rs  server_notification.rs  thread.rs  turn.rs
crates/app-server/src/: agent.rs  main.rs  model_limits.rs  notify_adapter.rs  notify_integration.rs  project_config.rs
crates/app-server/src/agent/: core.rs  openai_history.rs  tool_loop.rs  tools.rs
crates/app-server/src/agent/core/: auto_compact_and_config.rs  conversation.rs  preamble.rs  role_prompts.rs  run_turn.rs  tests.rs
crates/app-server/src/agent/tool_loop/: core.rs  doom_loop.rs  llm_stream.rs  openai_responses_helpers.rs  openai_responses_loop.rs  openai_responses_reasoning.rs  openai_responses_stream.rs
crates/app-server/src/agent/tools/: approval.rs  args.rs  catalog.rs  dispatch.rs  dynamic_registry.rs  redact.rs  spec.rs
crates/app-server/src/main/: app.rs  approval.rs  artifact.rs  artifact_history_tests.rs  db_vfs_http.rs  file_edit_delete.rs  file_read_glob_grep.rs  file_write_patch.rs  fs.rs  fs_tools_security_tests.rs  hooks_dispatch.rs  mcp.rs  mcp_tests.rs  mode_gate.rs  notify_integration.rs  preamble.rs  process_control.rs  repo_index_search.rs  repo_index_search_tests.rs  structured_error.rs  test_support.rs  thread_diff_tests.rs  thread_manage.rs  thread_observe.rs
crates/app-server/src/main/app/: approval.rs  artifact.rs  dispatch.rs  file.rs  fs.rs  mcp.rs  process.rs  repo.rs  thread.rs  turn.rs
crates/app-server/src/main/artifact/: read_list_delete.rs  write.rs
crates/app-server/src/main/file_read_glob_grep/: glob.rs  grep.rs  read.rs  shared.rs
crates/app-server/src/main/mcp/: handlers.rs  runtime.rs
crates/app-server/src/main/preamble/: hardening.rs  rpc_params.rs  server.rs
crates/app-server/src/main/process_control/: actor.rs  cargo_target.rs  execve_gate.rs  list.rs  signal.rs  start.rs
crates/app-server/src/main/process_stream/: common.rs  follow.rs  inspect.rs  (+3 more)
crates/artifact-store/: Cargo.toml
crates/artifact-store/src/: lib.rs
crates/checkpoint-spec/: Cargo.toml
crates/checkpoint-spec/src/: lib.rs
crates/code-pm/: Cargo.toml
crates/code-pm/src/: main.rs
crates/code-pm/src/main/: helpers1.rs  helpers2.rs  tasks.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: allowed_tools.rs  domain.rs  events.rs  hooks.rs  jsonrpc_line.rs  lib.rs  modes.rs  orchestrator.rs  paths.rs  redaction.rs  roles.rs  router.rs  run.rs  sandbox.rs  storage.rs  threads.rs
crates/core/src/orchestrator/: tests.rs
crates/ditto-llm/: Cargo.toml
crates/ditto-llm/src/: lib.rs
crates/eventlog/: CHANGELOG.md  Cargo.toml
crates/eventlog/src/: lib.rs
crates/execpolicy/: Cargo.toml
crates/execpolicy/src/: decision.rs  execpolicycheck.rs  lib.rs  main.rs  parser.rs  policy.rs  rule.rs
crates/execpolicy/tests/: basic.rs
crates/legacy-cli/: Cargo.toml
crates/legacy-cli/src/main/: app.rs  helpers1.rs  helpers2.rs  preamble.rs  tasks.rs
crates/legacy-git-adapter/: Cargo.toml
crates/legacy-git-adapter/src/: checks.rs  coder.rs  git.rs  identity.rs  lock.rs  merger.rs  repo.rs
crates/legacy-git-adapter/tests/: e2e.rs
crates/legacy-git-http-server/: Cargo.toml
crates/legacy-git-http-server/src/: lib.rs
crates/legacy-git-http-server/tests/: api_repos.rs  api_sessions.rs  git_smart_http.rs
crates/openai/: Cargo.toml
crates/openai/src/: lib.rs  responses.rs
crates/pm/: Cargo.toml
crates/pm-app-server/: Cargo.toml
crates/pm-app-server-protocol/: Cargo.toml
crates/pm-app-server-protocol/src/: export.rs  lib.rs
crates/pm-app-server/src/: agent.rs  main.rs
crates/pm-app-server/src/agent/: core.rs  tools.rs
crates/pm-app-server/src/main/: app.rs  approval.rs  artifact.rs  file_edit_delete.rs  file_read_glob_grep.rs  file_write_patch.rs  fs.rs  preamble.rs  process_control.rs  process_stream.rs  thread_manage.rs  thread_observe.rs
crates/pm-core/: Cargo.toml
crates/pm-core/src/: domain.rs  events.rs  hooks.rs  lib.rs  modes.rs  orchestrator.rs  paths.rs  redaction.rs  sandbox.rs  storage.rs  threads.rs
crates/pm-core/src/orchestrator/: tests.rs
crates/pm-http/: Cargo.toml
crates/pm-http/src/: lib.rs
crates/pm-http/tests/: api_repos.rs  api_sessions.rs  git_smart_http.rs
crates/pm/src/: main.rs
crates/pm/src/main/: app.rs  ask_exec.rs  preamble.rs  process_and_utils.rs  watch_inbox.rs
crates/repo-scan-runtime/: Cargo.toml
crates/repo-scan-runtime/src/: lib.rs
crates/repo-symbols-runtime/: Cargo.toml
crates/repo-symbols-runtime/src/: lib.rs
crates/toolchain-runtime/: Cargo.toml
crates/toolchain-runtime/src/: lib.rs
(+338 files in other folders)
