[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.1"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
diffy = "0.4"
fs2 = "0.4"
futures-util = "0.3"
globset = "0.4"
http-body-util = "0.1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["uuid1"] }
shlex = "1.3"
starlark = "0.13"
tempfile = "3"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "time", "sync", "io-util", "io-std", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "11", features = ["serde-json-impl", "no-serde-warnings"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
unicode-width = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
nix = { version = "0.29", default-features = false, features = ["fs", "process", "resource", "signal"] }
