[package]
name = "omne"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util.workspace = true
notify-kit = { path = "../../../notify-kit/crates/notify-kit" }
omne-jsonrpc = { package = "mcp-jsonrpc", path = "../../../mcp-kit/crates/jsonrpc" }
omne-app-server-protocol = { path = "../app-server-protocol" }
omne-core = { path = "../core" }
omne-protocol = { path = "../agent-protocol" }
omne-workflow-spec = { path = "../workflow-spec" }
ratatui = { version = "0.28", default-features = false, features = ["crossterm", "unstable-rendered-line-info"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
time.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true
walkdir.workspace = true
