[package]
name = "omne-agent-app-server-protocol"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
omne-agent-protocol = { path = "../agent-protocol" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
