[package]
name = "omne-artifact-store"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
omne-protocol = { path = "../agent-protocol" }
serde_json.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
