[package]
name = "code-pm"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
pm-core = { path = "../pm-core" }
pm-http = { path = "../pm-http" }
pm-git = { path = "../pm-git" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
