[package]
name = "omne-agent-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
globset.workspace = true
omne-agent-eventlog = { path = "../eventlog" }
omne-agent-protocol = { path = "../agent-protocol" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
