[package]
name = "ditto-llm"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
toml.workspace = true
