[package]
name = "pm-execpolicy"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "pm_execpolicy"
path = "src/lib.rs"

[[bin]]
name = "pm-execpolicy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
starlark.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

