[package]
name = "omne-legacy"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
omne-core = { package = "omne-legacy-core", path = "../legacy-core" }
omne-http = { path = "../legacy-git-http-server" }
omne-git = { path = "../legacy-git-adapter" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile.workspace = true
