[package]
name = "pm-app-server-protocol"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
pm-protocol = { path = "../pm-protocol" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
