[package]
name = "pm-app-server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
diffy.workspace = true
globset.workspace = true
pm-core = { path = "../pm-core" }
pm-execpolicy = { path = "../pm-execpolicy" }
pm-protocol = { path = "../pm-protocol" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
