[package]
name = "pm-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
pm-eventlog = { path = "../pm-eventlog" }
pm-protocol = { path = "../pm-protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
