[package]
name = "pm-http"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
http-body-util.workspace = true
pm-core = { path = "../pm-core" }
pm-git = { path = "../pm-git" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = "0.5"
tracing-subscriber.workspace = true
