[package]
name = "omne-repo-scan-runtime"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
globset.workspace = true
omne-fs-policy = { path = "../fs-policy" }
regex.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
