[package]
name = "omne-toolchain-runtime"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
flate2 = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
